syntax = "proto3";
option java_multiple_files = true;
package com.yufeng.grpcjavastub;

message HelloRequest {
  string firstName = 1;
  string lastName = 2;
}

message HelloResponse {
  string greeting = 1;
}

service HelloService {
  rpc hello(HelloRequest) returns (HelloResponse);
}

service StockQuoteProvider {

  rpc serverSideStreamingGetListStockQuotes(Stock) returns (stream StockQuote) {}

  rpc clientSideStreamingGetStatisticsOfStocks(stream Stock) returns (StockQuote) {}

  rpc bidirectionalStreamingGetListsStockQuotes(stream Stock) returns (stream StockQuote) {}
}
message Stock {
  string ticker_symbol = 1;
  string company_name = 2;
  string description = 3;
}
message StockQuote {
  double price = 1;
  int32 offer_number = 2;
  string description = 3;
}